refactor: 调整api请求方式&添加文档&添加更新用户方法
